<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="connect_last"
        android:enabled="true"
        android:icon="@drawable/ic_stat_aa"
        android:shortcutShortLabel="@string/shortcut_connect_title"
        android:shortcutLongLabel="@string/shortcut_connect_desc">
        <intent
            android:action="com.andrerinas.openheadunit.ACTION_CONNECT"
            android:targetPackage="com.andrerinas.headunitrevived"
            android:targetClass="com.andrerinas.openheadunit.main.AutomationActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="self_mode"
        android:enabled="true"
        android:icon="@drawable/ic_stat_aa"
        android:shortcutShortLabel="@string/shortcut_selfmode_title"
        android:shortcutLongLabel="@string/shortcut_selfmode_desc">
        <intent
            android:action="com.andrerinas.openheadunit.ACTION_START_SELF_MODE"
            android:targetPackage="com.andrerinas.headunitrevived"
            android:targetClass="com.andrerinas.openheadunit.main.AutomationActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="disconnect"
        android:enabled="true"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:shortcutShortLabel="@string/shortcut_disconnect_title"
        android:shortcutLongLabel="@string/shortcut_disconnect_desc">
        <intent
            android:action="com.andrerinas.openheadunit.ACTION_DISCONNECT"
            android:targetPackage="com.andrerinas.headunitrevived"
            android:targetClass="com.andrerinas.openheadunit.main.AutomationActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="exit_app"
        android:enabled="true"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:shortcutShortLabel="@string/shortcut_exit_title"
        android:shortcutLongLabel="@string/shortcut_exit_desc">
        <intent
            android:action="com.andrerinas.openheadunit.ACTION_STOP_SERVICE"
            android:targetPackage="com.andrerinas.headunitrevived"
            android:targetClass="com.andrerinas.openheadunit.main.AutomationActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="night_mode_day"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_day"
        android:shortcutShortLabel="@string/shortcut_night_mode_day_title"
        android:shortcutLongLabel="@string/shortcut_night_mode_day_desc">
        <intent
            android:action="com.andrerinas.openheadunit.ACTION_SET_NIGHT_MODE"
            android:targetPackage="com.andrerinas.headunitrevived"
            android:targetClass="com.andrerinas.openheadunit.main.AutomationActivity">
            <extra android:name="state" android:value="day" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="night_mode_night"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:shortcutShortLabel="@string/shortcut_night_mode_night_title"
        android:shortcutLongLabel="@string/shortcut_night_mode_night_desc">
        <intent
            android:action="com.andrerinas.openheadunit.ACTION_SET_NIGHT_MODE"
            android:targetPackage="com.andrerinas.headunitrevived"
            android:targetClass="com.andrerinas.openheadunit.main.AutomationActivity">
            <extra android:name="state" android:value="night" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="night_mode_auto"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_compass"
        android:shortcutShortLabel="@string/shortcut_night_mode_auto_title"
        android:shortcutLongLabel="@string/shortcut_night_mode_auto_desc">
        <intent
            android:action="com.andrerinas.openheadunit.ACTION_SET_NIGHT_MODE"
            android:targetPackage="com.andrerinas.headunitrevived"
            android:targetClass="com.andrerinas.openheadunit.main.AutomationActivity">
            <extra android:name="state" android:value="auto" />
        </intent>
    </shortcut>
</shortcuts>
