<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.andrerinas.openheadunit.main.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_usbListFragment"
            app:destination="@id/usbListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_networkListFragment"
            app:destination="@id/networkListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment android:id="@+id/diagnosticsFragment" android:name="com.andrerinas.openheadunit.main.DiagnosticsFragment" android:label="Diagnostics" />

    <fragment android:id="@+id/connectionSetupFragment" android:name="com.andrerinas.openheadunit.main.ConnectionSetupFragment" android:label="Connection setup" />

    <fragment android:id="@+id/driveSettingsFragment" android:name="com.andrerinas.openheadunit.main.DriveSettingsFragment" android:label="@string/settings" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.andrerinas.openheadunit.main.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_keymapFragment"
            app:destination="@id/keymapFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_supportFragment"
            app:destination="@id/supportFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_autoConnectFragment"
            app:destination="@id/autoConnectFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_darkModeFragment"
            app:destination="@id/darkModeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_dpiSettingsFragment"
            app:destination="@id/dpiSettingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_autoStartFragment"
            app:destination="@id/autoStartFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_vehicleInfoFragment"
            app:destination="@id/vehicleInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_settingsFragment_to_loadingScreenFragment"
            app:destination="@id/loadingScreenFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_micSettingsFragment"
            app:destination="@id/micSettingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_settingsFragment_to_permissionsFragment"
            app:destination="@id/permissionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>



    <fragment
        android:id="@+id/keymapFragment"
        android:name="com.andrerinas.openheadunit.main.KeymapFragment"
        android:label="@string/keymap" />

    <fragment
        android:id="@+id/permissionsFragment"
        android:name="com.andrerinas.openheadunit.main.PermissionsFragment"
        android:label="@string/permissions" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.andrerinas.openheadunit.main.AboutFragment"
        android:label="@string/about" />

    <fragment
        android:id="@+id/supportFragment"
        android:name="com.andrerinas.openheadunit.main.SupportFragment"
        android:label="@string/support" />

    <fragment
        android:id="@+id/autoConnectFragment"
        android:name="com.andrerinas.openheadunit.main.AutoConnectFragment"
        android:label="@string/auto_connect_settings" />

    <fragment
        android:id="@+id/dpiSettingsFragment"
        android:name="com.andrerinas.openheadunit.main.DpiSettingsFragment"
        android:label="@string/dpi" />

    <fragment
        android:id="@+id/darkModeFragment"
        android:name="com.andrerinas.openheadunit.main.DarkModeFragment"
        android:label="@string/dark_mode_settings">
        <action
            android:id="@+id/action_darkModeFragment_to_locationsFragment"
            app:destination="@id/locationsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_darkModeFragment_to_mapPickerFragment"
            app:destination="@id/mapPickerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/locationsFragment"
        android:name="com.andrerinas.openheadunit.main.LocationsFragment"
        android:label="@string/geofence_locations_title">
        <action
            android:id="@+id/action_locationsFragment_to_mapPickerFragment"
            app:destination="@id/mapPickerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/mapPickerFragment"
        android:name="com.andrerinas.openheadunit.main.MapPickerFragment"
        android:label="@string/geofence_pick_location">
        <argument
            android:name="mode"
            app:argType="string"
            android:defaultValue="geofence" />
        <argument
            android:name="geofenceId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/autoStartFragment"
        android:name="com.andrerinas.openheadunit.main.AutoStartFragment"
        android:label="@string/auto_start_settings" />

    <fragment
        android:id="@+id/vehicleInfoFragment"
        android:name="com.andrerinas.openheadunit.main.VehicleInfoFragment"
        android:label="@string/vehicle_info_settings" />

    <fragment
        android:id="@+id/loadingScreenFragment"
        android:name="com.andrerinas.openheadunit.main.LoadingScreenFragment"
        android:label="@string/loading_screen" />

    <fragment
        android:id="@+id/usbListFragment"
        android:name="com.andrerinas.openheadunit.main.UsbListFragment"
        android:label="@string/usb" />

    <fragment
        android:id="@+id/networkListFragment"
        android:name="com.andrerinas.openheadunit.main.NetworkListFragment"
        android:label="@string/wifi" />

    <fragment
        android:id="@+id/micSettingsFragment"
        android:name="com.andrerinas.openheadunit.main.MicSettingsFragment"
        android:label="@string/microphone_settings" />

</navigation>